--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/node": "^20.10.0",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "typescript": "~5.3.3",
+    "typescript": "^5.9.3",
     "vite": "^5.4.0",
     "vue-tsc": "^2.0.0"
   }
